sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var i=0
  val l=getValueCount()
  var v=0
  var k=(-1)
  var m=0
  for(i<- 1 to l-1){
    v=getValue(i)
    for (j<- j to i){
      if (isSmallerThan(i-1+k,i+k)==false){
        copy(i+k-1,i+k)
        m=i+k-1
      }
      k=k-1
      setValue(m,v)
  	}
	}
}